--- a/WebExam/src/main/resources/templates/appointment-form.html
+++ b/WebExam/src/main/resources/templates/appointment-form.html
@@ -70,9 +70,9 @@
                                 <label class="control-label" for="appointment-for">Reason for the visit?</label>
                                 <select th:field="*{purposeOfVisit}" id="appointment-for" name="appointment-for" class="form-control">
                                     <option th:value="'Primary Examination'">Primary Examination</option>
-                                    <option th:value="'Secondary Examination''">Secondary Examination</option>
-                                    <option th:value="'Medical Check''">Medical Check</option>
-                                    <option th:value="'Other Purpose''">Other</option>
+                                    <option th:value="'Secondary Examination'">Secondary Examination</option>
+                                    <option th:value="'Medical Check'">Medical Check</option>
+                                    <option th:value="'Other Purpose'">Other</option>
                                 </select>
                             </div>
                         </div>
