--- a/WebExam/src/main/resources/templates/my-doc.html
+++ b/WebExam/src/main/resources/templates/my-doc.html
@@ -57,7 +57,7 @@
                 placeholder="Search a specific Health Center"
         />
       </div>
-      <button sec:authorize="isAuthenticated()" id="btn-search" type="submit" class="btn my-1.5">
+      <button id="btn-search" type="submit" class="btn my-1.5">
         Search
       </button>
 
